--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -162,11 +162,60 @@
     <!-- .5 fuente -->
     <section class="cont_fuentes">
         <h3>TIPOGRAFIAS</h3>
+
         <div class="fuente">
             <p>Primera Fuente</p>
-            <h4>Mona sans</h4>
+            <img class="img_font" src="../assets/img/monasans.svg" alt="">
+            <div class="cont_fuentess">
+                <div class="cont_font">
+                    <img src="../assets/img/blackwide.svg" alt="">
+                    <p>Black Wide</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/boldwide.svg" alt="">
+                    <p>Bold Wide</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/mediumwide.svg" alt="">
+                    <p>Medium Wide</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/regularwide.svg" alt="">
+                    <p>Regular Wide</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/lightwide.svg" alt="">
+                    <p>Light Wide</p>
+                </div>
+            </div>
         </div>
 
+        <div class="fuente">
+            <p>Segunda Fuente</p>
+            <img class="img_font" src="../assets/img/monanarrow.svg" alt="">
+            <div class="cont_fuentess">
+                <div class="cont_font">
+                    <img src="../assets/img/blacknarrow.svg" alt="">
+                    <p>Black Narrow</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/boldnarrow.svg" alt="">
+                    <p>Bold Narrow</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/mediumnarrow.svg" alt="">
+                    <p>Medium Narrow</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/regularnarrow.svg" alt="">
+                    <p>Regular Narrow</p>
+                </div>
+                <div class="cont_font">
+                    <img src="../assets/img/lightnarrow.svg" alt="">
+                    <p>Light Narrow</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- *. pie de pagina -->
