add ajustes de responsive de imagenes y grid en fuentes - add new section de cont_img

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -169,23 +169,23 @@
             <div class="cont_fuentess">
                 <div class="cont_font">
                     <img src="../assets/img/blackwide.svg" alt="">
-                    <p>Black Wide</p>
+                    <p class="nombre_fuente">Black Wide</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/boldwide.svg" alt="">
-                    <p>Bold Wide</p>
+                    <p class="nombre_fuente">Bold Wide</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/mediumwide.svg" alt="">
-                    <p>Medium Wide</p>
+                    <p class="nombre_fuente">Medium Wide</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/regularwide.svg" alt="">
-                    <p>Regular Wide</p>
+                    <p class="nombre_fuente">Regular Wide</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/lightwide.svg" alt="">
-                    <p>Light Wide</p>
+                    <p class="nombre_fuente">Light Wide</p>
                 </div>
             </div>
         </div>
@@ -196,26 +196,34 @@
             <div class="cont_fuentess">
                 <div class="cont_font">
                     <img src="../assets/img/blacknarrow.svg" alt="">
-                    <p>Black Narrow</p>
+                    <p class="nombre_fuente">Black Narrow</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/boldnarrow.svg" alt="">
-                    <p>Bold Narrow</p>
+                    <p class="nombre_fuente">Bold Narrow</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/mediumnarrow.svg" alt="">
-                    <p>Medium Narrow</p>
+                    <p class="nombre_fuente">Medium Narrow</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/regularnarrow.svg" alt="">
-                    <p>Regular Narrow</p>
+                    <p class="nombre_fuente">Regular Narrow</p>
                 </div>
                 <div class="cont_font">
                     <img src="../assets/img/lightnarrow.svg" alt="">
-                    <p>Light Narrow</p>
+                    <p class="nombre_fuente">Light Narrow</p>
                 </div>
             </div>
         </div>
+    </section>
+
+    
+    <!-- .6 imagenes -->
+    <section class="cont_img">
+        <div class="cont_img_uno"></div>
+        <div class="cont_img_dos"></div>
+        <div class="cont_img_tres"></div>
     </section>
 
     <!-- *. pie de pagina -->
