ajuste responsive proyecto jannier

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -138,7 +138,7 @@
         <h3>PALETA DE COLORES</h3>
         <div class="cont_cont_colores">
             <div class="color_uno">
-                <p class="titulo">Background</p>
+                <p class="titulo" content="notranslate">Background</p>
                 <p>#FFFFFF</p>
             </div>
 
@@ -160,7 +160,7 @@
     </section>
 
     <!-- .5 fuente -->
-    <section class="cont_fuentes">
+    <section class="cont_fuentes" content="notranslate">
         <h3>TIPOGRAFIAS</h3>
 
         <div class="fuente">
