add texto de proyecto jannier

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="data_proyecto">
-                Lorem ipsum dolor sit amet consectetur. Aliquet diam mattis semper in in elementum ac amet. Nisi sit eleifend neque egestas egestas sapien. Tortor consequat orci arcu dictum dui elit faucibus. Ultrices neque at venenatis id dignissim sit ipsum non odio.
+                Pagina web de un portafolio echo para un desarrollador full-stack con 2 vistas totalmente responsive, Estilo minimalista y limpio con paleta tri-color y multitono, fuentes largas y sin serif estilo urbano y en contraste al blanco.
             </div>
         </div>
     </section>
