--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -221,9 +221,18 @@
     
     <!-- .6 imagenes -->
     <section class="cont_img">
-        <div class="cont_img_uno"></div>
-        <div class="cont_img_dos"></div>
-        <div class="cont_img_tres"></div>
+        <div class="cont_img_grup">
+            <div class="cont_img_uno">
+                <img src="../assets/img/mockupjannieruno.jpg" alt="">
+            </div>
+            <div class="cont_img_dos">
+                <img src="../assets/img/mockupjannieruno.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="cont_img_tres">
+            <img src="../assets/img/mockupjannieruno.jpg" alt="">
+        </div>
     </section>
 
     <!-- *. pie de pagina -->
