add video proyecto jannier

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -106,7 +106,11 @@
 
     <!-- .2 banner -->
     <section class="cont_banner">
-        <img src="../assets/img/banner_jannier.png" alt="">
+        <video class="video_pro_jannier"
+        autoplay
+        muted
+        playsinline
+        loop src="../assets/img/vidprojannier.mp4"></video>
     </section>
 
     <!-- .3 acerca del proyecto -->
