ajuste video proyecto jannier

--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -159,15 +159,15 @@
     <section class="cont_grilla_proyectos">
 
         <a href="../projects/portafolio_jannier.html" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
+            <img src="../assets/img/mockupjannieruno.jpg" alt="">
             <div class="cont_pie_proyecto">
                 <p>
-                    DESIGNER
+                    PORTAFOLIO JANNIER
                 </p>
                 <div class="cont_fecha">
                     <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
                     <p>
-                        01-01-2023
+                        05-03-2024
                     </p>
                 </div>
             </div>
