add img_tres de banner proyecto jannier

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -234,7 +234,7 @@
             </div>
         </div>
         <div class="cont_img_tres">
-            <img src="../assets/img/mockupjannieruno.jpg" alt="">
+            <img src="../assets/img/bannertres.png" alt="img_tres">
         </div>
     </section>
 
