add video a proyecto jannier

--- a/projects/portafolio_jannier.html
+++ b/projects/portafolio_jannier.html
@@ -230,7 +230,12 @@
                 <img src="../assets/img/mockupjannieruno.jpg" alt="">
             </div>
             <div class="cont_img_dos">
-                <img src="../assets/img/mockupjannieruno.jpg" alt="">
+                <video 
+                autoplay
+                muted
+                playsinline
+                loop
+                src="../assets/img/janiericonos.mp4"></video>
             </div>
         </div>
         <div class="cont_img_tres">
