--- a/pages/index.html
+++ b/pages/index.html
@@ -562,7 +562,7 @@
         </div>
         <div class="cont_lista_mis_servicios">
           <a class="cont_item_mis_servicios" href="">
-            <h4>Freelancer</h4>
+            <h4>INCUBAPP</h4>
             <div class="subtitulo_experiencia">
               <p class="titulo">Diseñador ux - ui</p>
               <p class="fecha">2022 - Actualmente</p>
@@ -573,7 +573,7 @@
             <h4>Fintra s.a</h4>
             <div class="subtitulo_experiencia">
               <p class="titulo">Diseñador ux - ui</p>
-              <p class="fecha">2019 - 2021</p>
+              <p class="fecha">2022 - 2022</p>
             </div>
             <p>( 02 )</p>
           </a>
@@ -581,7 +581,7 @@
             <h4>Geotech s.a</h4>
             <div class="subtitulo_experiencia">
               <p class="titulo">Diseñador ux - ui</p>
-              <p class="fecha">2019 - 2021</p>
+              <p class="fecha">2022 - 2022</p>
             </div>
             <p>( 03 )</p>
           </a>
@@ -589,7 +589,7 @@
             <h4>Digihab</h4>
             <div class="subtitulo_experiencia">
               <p class="titulo">Diseñador ux - ui</p>
-              <p class="fecha">2018 - 2019</p>
+              <p class="fecha">2020 - 2022</p>
             </div>
             <p>( 04 )</p>
           </a>
@@ -598,7 +598,7 @@
           
           <a class="cont_item_mis_servicios" href="">
             <div class="cont_uno">
-              <h4>Freelancer</h4>
+              <h4>INCUBAPP</h4>
               <div class="subtitulo_experiencia">
                 <p class="titulo">Diseñador ux - ui</p>
                 <p class="fecha">2022 - actualmente</p>
@@ -621,7 +621,7 @@
               <h4>Fintra s.a</h4>
               <div class="subtitulo_experiencia">
                 <p class="titulo">Diseñador ux - ui</p>
-                <p class="fecha">2019 - 2021</p>
+                <p class="fecha">2022 - 2022</p>
               </div>
             </div>
             <p>( 03 )</p>
@@ -631,7 +631,7 @@
               <h4>Geotech</h4>
               <div class="subtitulo_experiencia">
                 <p class="titulo">Diseñador ux - ui</p>
-                <p class="fecha">2019 - 2021</p>
+                <p class="fecha">2022 - 2022</p>
               </div>
             </div>
             <p>( 04 )</p>
@@ -641,7 +641,7 @@
               <h4>Digihab</h4>
               <div class="subtitulo_experiencia">
                 <p class="titulo">Diseñador ux - ui</p>
-                <p class="fecha">2018 - 2019</p>
+                <p class="fecha">2020 - 2022</p>
               </div>
             </div>
             <p>( 05 )</p>
