add page inicio y todas sus modificaciones

--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -158,11 +158,11 @@
     <!-- .3 cinta -->
     <section class="cont_grilla_proyectos">
 
-        <a href="../projects/portafolio_jannier.html" class="cont_proyectos" >
+        <a href="../projects/portafolio_daniel.html" class="cont_proyectos" >
             <img src="../assets/img/mockupjannieruno.jpg" alt="">
             <div class="cont_pie_proyecto">
                 <p>
-                    PORTAFOLIO JANNIER
+                    PORTAFOLIO DANIEL
                 </p>
                 <div class="cont_fecha">
                     <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
