add animacion de scroll

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -472,6 +472,7 @@
     </section>
 
     <section class="cont_animacionmiskills_vertical">
+
       <div class="primer_section_inicio">
         <div class="fila_uno">
 
@@ -480,7 +481,7 @@
           </div>
           <div class="subtitulo_section_inicio">
             <img src="/assets/img/imgparrafoiniciomyskills.svg" alt="">
-            <p>TODO LO QUE SE, ESTA ENFOCADO AL MEJORAMIENTO DE LO VISUAL, DE LA EXPERIENCIA Y DE LA USABILIDAD.</p>
+            <p>TODO LO QUE SE, ESTA ENFOCADO AL MEJORAMIENTO DE LO VISUAL, DE LA EXPERIENCIA CON EL PRODUCTO Y DE LA USABILIDAD.</p>
           </div>
         </div>
 
@@ -495,9 +496,369 @@
             <img src="/assets/img/animacioncontador.gif" alt="">
 
           </div>
-           
         </div>
       </div>
+
+      <div id="uno" class="segundo_section_inicio">
+        <div class="cont_titulo">
+          <h4>UI - DEGNER</h4>
+          <div class="num_titulo_skils">
+            <p>01</p>
+          </div>
+
+        </div>
+
+        <div class="list_skills">
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/figma.svg" alt="">
+              <h4>Figma</h4>
+            </div>
+
+            <p class="subtitulo">Pro</p>
+            <p class="contador">01</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/zeplin.svg" alt="">
+              <h4>zeplin</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">02</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/adobe_illustrator.svg" alt="">
+              <h4>Ilustrator</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">03</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/adobe_xd.svg" alt="">
+              <h4>Adobe xd</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">04</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/adobe_photoshop.svg" alt="">
+              <h4>Photoshop</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">05</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/adobe_after_effects.svg" alt="">
+              <h4>After effect</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">06</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/adobe.svg" alt="">
+              <h4>Adobe express</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">07</p>
+
+
+          </div>
+
+
+
+
+
+        </div>
+
+      </div>
+
+      <div id="dos" style="filter: invert(100%); background: #ffffff;" class="segundo_section_inicio">
+        <div class="cont_titulo">
+          <h4>UX - DEGNER</h4>
+          <div class="num_titulo_skils">
+            <p>02</p>
+          </div>
+
+        </div>
+
+        <div class="list_skills">
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/useberry.svg" alt="">
+              <h4>Useberry</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">01</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/miro.svg" alt="">
+              <h4>Miro</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">02</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/jotjar.svg" alt="">
+              <h4>Jotjar</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">03</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/tiperforms.svg" alt="">
+              <h4>Tiperforms</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">04</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/googleforms.svg" alt="">
+              <h4>Google forms</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">05</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/optimalworkshop.svg" alt="">
+              <h4>Optimal Workshop</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">06</p>
+
+
+          </div>
+
+
+        </div>
+
+      </div>
+
+      <div id="tres" class="segundo_section_inicio">
+        <div class="cont_titulo">
+          <h4>DESARROLADOR</h4>
+          <div class="num_titulo_skils">
+            <p>03</p>
+          </div>
+
+        </div>
+
+        <div class="list_skills">
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/git.svg" alt="">
+              <h4>Git</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">01</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/vs_code.svg" alt="">
+              <h4>Visual code</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">02</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/flutter.svg" alt="">
+              <h4>Flutter</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">03</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/python.svg" alt="">
+              <h4>Python</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">04</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/js.svg" alt="">
+              <h4>Javascript</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">05</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/sass.svg" alt="">
+              <h4>Sass</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">06</p>
+
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div id="cuatro" style="filter: invert(100%); background: #ffffff;" class="segundo_section_inicio">
+        <div class="cont_titulo">
+          <h4>INTERACCIONES</h4>
+          <div class="num_titulo_skils">
+            <p>04</p>
+          </div>
+
+        </div>
+
+        <div class="list_skills">
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/lottie.svg" alt="">
+              <h4>Lottie</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">01</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/gsap.svg" alt="">
+              <h4>Gsap</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">02</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/adobe_premiere.svg" alt="">
+              <h4>Premiere pro</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">03</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/barva.svg" alt="">
+              <h4>Barva</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">04</p>
+
+
+          </div>
+
+        </div>
+
+      </div>
+
     </section>
 
     <section class="pie_de_pagina">
@@ -559,6 +920,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="../js/three.js"></script>
     <script src="../js/admthree.js"></script>
+    <script src="../js/logica_scroll_cont_skills.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
