--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -29,7 +29,7 @@
     <title>Dsains</title>
   </head>
 
-  <body>
+  <body class="body_inicio">
     <div class="cursor"></div>
 
     <header class="menu_i">
@@ -47,8 +47,6 @@
       </div>
       <div class="cont_list_menu">
         <a class="boton_list_menu" href=""> Home </a>
-
-        <a class="boton_list_menu" href=""> Acerca de mi </a>
 
         <a class="boton_list_menu" href=""> Portafolios </a>
 
@@ -517,7 +515,7 @@
             </div>
 
             <p class="subtitulo">Pro</p>
-            <p class="contador">01</p>
+            <p class="contador">(01)</p>
 
 
           </div>
@@ -530,7 +528,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">02</p>
+            <p class="contador">(02)</p>
 
 
           </div>
@@ -543,7 +541,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">03</p>
+            <p class="contador">(03)</p>
 
 
           </div>
@@ -556,7 +554,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">04</p>
+            <p class="contador">(04)</p>
 
 
           </div>
@@ -569,7 +567,7 @@
             </div>
 
             <p class="subtitulo">Medio</p>
-            <p class="contador">05</p>
+            <p class="contador">(05)</p>
 
 
           </div>
@@ -582,7 +580,7 @@
             </div>
 
             <p class="subtitulo">Medio</p>
-            <p class="contador">06</p>
+            <p class="contador">(06)</p>
 
 
           </div>
@@ -595,7 +593,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">07</p>
+            <p class="contador">(07)</p>
 
 
           </div>
@@ -626,7 +624,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">01</p>
+            <p class="contador">(01)</p>
 
 
           </div>
@@ -639,7 +637,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">02</p>
+            <p class="contador">(02)</p>
 
 
           </div>
@@ -652,7 +650,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">03</p>
+            <p class="contador">(03)</p>
 
 
           </div>
@@ -665,7 +663,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">04</p>
+            <p class="contador">(04)</p>
 
 
           </div>
@@ -678,7 +676,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">05</p>
+            <p class="contador">(05)</p>
 
 
           </div>
@@ -691,7 +689,7 @@
             </div>
 
             <p class="subtitulo">Medio</p>
-            <p class="contador">06</p>
+            <p class="contador">(06)</p>
 
 
           </div>
@@ -719,7 +717,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">01</p>
+            <p class="contador">(01)</p>
 
 
           </div>
@@ -732,7 +730,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">02</p>
+            <p class="contador">(02)</p>
 
 
           </div>
@@ -745,7 +743,7 @@
             </div>
 
             <p class="subtitulo">Medio</p>
-            <p class="contador">03</p>
+            <p class="contador">(03)</p>
 
 
           </div>
@@ -758,7 +756,7 @@
             </div>
 
             <p class="subtitulo">Medio</p>
-            <p class="contador">04</p>
+            <p class="contador">(04)</p>
 
 
           </div>
@@ -771,7 +769,7 @@
             </div>
 
             <p class="subtitulo">Medio</p>
-            <p class="contador">05</p>
+            <p class="contador">(05)</p>
 
 
           </div>
@@ -784,7 +782,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">06</p>
+            <p class="contador">(06)</p>
 
 
           </div>
@@ -811,7 +809,7 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">01</p>
+            <p class="contador">(01)</p>
 
 
           </div>
@@ -820,11 +818,39 @@
 
             <div class="img_titulo_item">
               <img src="/assets/img/iconosskills/gsap.svg" alt="">
-              <h4>Gsap</h4>
+              <h4>Gsap.js</h4>
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">02</p>
+            <p class="contador">(02)</p>
+
+
+          </div>
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/three.svg" alt="">
+              <h4>Three.js</h4>
+            </div>
+
+            <p class="subtitulo">Medio</p>
+            <p class="contador">(03)</p>
+
+
+          </div>
+
+
+
+          <div class="item_list_skills">
+
+            <div class="img_titulo_item">
+              <img src="/assets/img/iconosskills/barva.svg" alt="">
+              <h4>Barva.js</h4>
+            </div>
+
+            <p class="subtitulo">Alto</p>
+            <p class="contador">(04)</p>
 
 
           </div>
@@ -837,23 +863,12 @@
             </div>
 
             <p class="subtitulo">Alto</p>
-            <p class="contador">03</p>
+            <p class="contador">(05)</p>
 
 
           </div>
 
-          <div class="item_list_skills">
 
-            <div class="img_titulo_item">
-              <img src="/assets/img/iconosskills/barva.svg" alt="">
-              <h4>Barva</h4>
-            </div>
-
-            <p class="subtitulo">Alto</p>
-            <p class="contador">04</p>
-
-
-          </div>
 
         </div>
 
