add ajuste al responsive section /portafolio and add boton de ir

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -339,6 +339,7 @@
           href="/pages/p_ux_ui.html"
         >
           <h4>UX-UI</h4>
+          <div class="ir_boton"> <img src="/assets/img/ir.svg" alt=""></div>
           <p>( 01 )</p>
           <section class="cont_slider_banderas">
             <div class="sslider_uno">
@@ -355,6 +356,7 @@
           href="/pages/p_ux_writing.html"
         >
           <h4>UX - WRITING</h4>
+          <div class="ir_boton"> <img src="/assets/img/ir.svg" alt=""></div>
           <p>( 02 )</p>
           <section class="cont_slider_banderas">
             <div class="sslider_uno">
@@ -371,6 +373,7 @@
           href="/pages/p_ux_research.html"
         >
           <h4>UX - RESEARSH</h4>
+          <div class="ir_boton"> <img src="/assets/img/ir.svg" alt=""></div>
           <p>( 03 )</p>
           <section class="cont_slider_banderas">
             <div class="sslider_uno">
@@ -386,7 +389,8 @@
           class="cont_item_mis_servicios cursor-scale small"
           href="/pages/p_ux_developer.html"
         >
-          <h4>DESARRROLLADOR</h4>
+          <h4>FRONTEND</h4>
+          <div class="ir_boton"> <img src="/assets/img/ir.svg" alt=""></div>
           <p>( 04 )</p>
           <section class="cont_slider_banderas">
             <div class="sslider_uno">
@@ -914,7 +918,7 @@
 
         <div class="item_pie">
 
-          <p>Trabajemos juntos, <strong>Contactame</strong></p>
+          <p>Trabajemos juntos, <a href=""><strong>Contactame</strong></a></p>
 
         </div>
 
