add mod plantilla portafolios en proyectos

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -32,7 +32,6 @@
   <body class="body_inicio">
     <div class="cursor"></div>
 
-
     <section class="conte__menui_movil">
       <header class="header__index">
         <div class="cont__logo__nav">
@@ -79,7 +78,6 @@
               </a>
             </div>
 
-
             <div class="cont_opcion_lista">
               <a translate="no" href="/pages/p_ux_writing.html"
                 >UX - Writing
@@ -93,28 +91,25 @@
                 <p>(05)</p>
               </a>
             </div>
-
           </ul>
 
-          <a class="boton_contactar" href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-          target="_blank"> HABLEMOS</a>
-
+          <a
+            class="boton_contactar"
+            href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank"
+            >CONTACTAME</a
+          >
 
           <div class="list_social">
-                <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
-                  >LinkedIn</a
-                >
-                <a href="https://www.facebook.com/yaksin.vasques.5/"
-                  >Facebook</a
-                >
-                <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-
-            </div>
+            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+              >LinkedIn</a
+            >
+            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
           </div>
         </div>
       </div>
     </section>
-
 
     <header class="menu_i">
       <div class="cont_logo">
@@ -141,13 +136,18 @@
     <section class="seccion_inicio">
       <div class="cont_primera_columna_inicio">
         <div class="columna_titulo">
-          <h1>Hola, soy el diseñador ux - ui que buscas.</h1>
+          <h1>SOY EL DISEÑADOR UX - UI QUE BUSCAS</h1>
           <p>
             Bienvenido a mi portafolio, aqui podras encontrar mis ultimos
             trabajos y referencias laborales.
           </p>
-          <a class="boton_hablemos" class="boton_contactar" href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
-          target="_blank">Hablemos</a>
+          <a
+            class="boton_hablemos"
+            class="boton_contactar"
+            href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank"
+            >Hablemos</a
+          >
         </div>
 
         <div class="cont_pie_titulo">
@@ -901,7 +901,12 @@
       <div class="cont_barra_dos_links_pie">
         <div class="item_pie">
           <p>
-            Trabajemos juntos, <a href=""><strong>Contactame</strong></a>
+            Trabajemos juntos,
+            <a
+              href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+              target="_blank"
+              ><strong>Contactame</strong></a
+            >
           </p>
         </div>
       </div>
