--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -1,248 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Portafolio web de Jaksin sain , diseñador de productos tecnológicos enfocado a la interacción positiva de usuarios y el mejoramiento de productos con 3 años de experiencia.">
-    <meta name="keywords" content="portafolio,ux,ui,diseñador,diseñador Ux-Ui,diseñador ux,proyectos ux-ui">
-    <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../style/sass.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portafolio web de Jaksin sain , diseñador de productos tecnológicos enfocado a la interacción positiva de usuarios y el mejoramiento de productos con 3 años de experiencia."
+    />
+    <meta
+      name="keywords"
+      content="portafolio,ux,ui,diseñador,diseñador Ux-Ui,diseñador ux,proyectos ux-ui"
+    />
+    <link
+      rel="shortcut icon"
+      href="../assets/img/iconweb.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../style/sass.css" />
     <title>Ux-Ui</title>
-</head>
+  </head>
 
-<body class="body_plantilla">
+  <body class="body_plantilla">
     <div class="cursor"></div>
+
     <!-- Menu -->
     <section class="conte__menu">
-        <header class="header__index">
-            <div class="cont__logo__nav">
-                <a href="./index.html">
-                    <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width: 100px"
-                        autoplay>
-                    </lottie-player>
-                </a>
-            </div>
-            <div class="icono-menu">
-                <div class="bars__menu">
-                    <span class="line1__bars-menu"></span>
-                    <span class="line2__bars-menu"></span>
-                    <span class="line3__bars-menu"></span>
-                </div>
-            </div>
-        </header>
-        <div class="contendor_activo_de_menu">
-            <div class="list_menu">
-                <p class="titulo_list_menu">Menu</p>
-                <ul class="lista_uno">
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" style="font-weight: 400" href="../pages/index.html">Home
-                            <p>(01)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <a translate="no" style="color:#b8b8b8 ;">UX - UI
-                            <p>(02)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="/pages/p_ux_research.html">UX - Research
-                            <p>(03)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="/pages/p_ux_writing.html">UX - Writing
-                            <p>(04)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a href="/pages/p_ux_developer.html">Desarrollador
-                            <p>(06)</p>
-                        </a>
-                    </div>
-                </ul>
-                <div class="list_social">
-                    <div class="cont_uno">
-                        <p class="titulo_list_social">Social</p>
-                        <ul>
-                            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
-                            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-                            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-                        </ul>
-                    </div>
-                    <div class="cont_dos">
-                        <p>Ponerse En Contacto</p>
-                        <h5>Yaksinvasquez@gmail.com</h5>
-                    </div>
-                </div>
-            </div>
+      <header class="header__index">
+        <div class="cont__logo__nav">
+          <a href="./index.html">
+            <lottie-player
+              id="logo"
+              src="../assets/img/logoanimado.json"
+              speed="1"
+              style="width: 100px"
+              autoplay
+            >
+            </lottie-player>
+          </a>
         </div>
+        <div class="icono-menu">
+          <div class="bars__menu">
+            <span class="line1__bars-menu"></span>
+            <span class="line2__bars-menu"></span>
+            <span class="line3__bars-menu"></span>
+          </div>
+        </div>
+      </header>
+      <div class="contendor_activo_de_menu">
+        <div class="list_menu">
+          <p class="titulo_list_menu">Menu</p>
+          <ul class="lista_uno">
+            <div class="cont_opcion_lista">
+              <img
+                class="flachamenu"
+                src="../assets/img/flachamenu.svg"
+                alt=""
+              />
+              <a
+                translate="no"
+                style="font-weight: 400"
+                href="../pages/index.html"
+                >Home
+                <p>(01)</p>
+              </a>
+            </div>
+            <div class="cont_opcion_lista">
+              <a translate="no" style="color: #b8b8b8"
+                >UX - UI
+                <p>(02)</p>
+              </a>
+            </div>
+            <div class="cont_opcion_lista">
+              <img
+                class="flachamenu"
+                src="../assets/img/flachamenu.svg"
+                alt=""
+              />
+              <a translate="no" href="/pages/p_ux_research.html"
+                >UX - Research
+                <p>(03)</p>
+              </a>
+            </div>
+            <div class="cont_opcion_lista">
+              <img
+                class="flachamenu"
+                src="../assets/img/flachamenu.svg"
+                alt=""
+              />
+              <a translate="no" href="/pages/p_ux_writing.html"
+                >UX - Writing
+                <p>(04)</p>
+              </a>
+            </div>
+            <div class="cont_opcion_lista">
+              <img
+                class="flachamenu"
+                src="../assets/img/flachamenu.svg"
+                alt=""
+              />
+              <a href="/pages/p_ux_developer.html"
+                >Desarrollador
+                <p>(06)</p>
+              </a>
+            </div>
+          </ul>
+          <div class="list_social">
+            <div class="cont_uno">
+              <p class="titulo_list_social">Social</p>
+              <ul>
+                <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+                  >LinkedIn</a
+                >
+                <a href="https://www.facebook.com/yaksin.vasques.5/"
+                  >Facebook</a
+                >
+                <a href="https://www.instagram.com/yakhsin/">Instagram</a>
+              </ul>
+            </div>
+            <div class="cont_dos">
+              <p>Ponerse En Contacto</p>
+              <h5>Yaksinvasquez@gmail.com</h5>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- .1 inicio -->
     <section class="cont_inicio">
-        <div class="colum_uno">
-            <div class="titulo">
-                <h1 translate="no">
-                    UX - UI DESIGN
-                </h1>
-            </div>
-            <div class="parrafo">
-                <p>
-                    No solo me encargo de hacer cosas bonitas, sino que también hago que estas cosas sean realmente
-                    útiles y resuelvan las necesidades reales de los usuarios.
-                </p>
-            </div>
-            <div class="contadores">
-
-            </div>
-            <div class="stikerlvl">
-                <img src="../assets/img/stikerplantilla.svg" alt="fondostiker">
-                <p translate="no">Meddle</p>
-            </div>
+      <div class="colum_uno">
+        <div class="titulo">
+          <h1 translate="no">UX - UI DESIGN</h1>
         </div>
-
-        <div class="columdos">
-
+        <div class="parrafo">
+          <p>
+            No solo me encargo de hacer cosas bonitas, sino que también hago que
+            estas cosas sean realmente útiles y resuelvan las necesidades reales
+            de los usuarios.
+          </p>
         </div>
+      </div>
 
+      <div class="columdos"></div>
     </section>
     <!-- .2 cinta -->
     <section class="cont_cinta_plantilla">
-        <div class="slider_inicio">
-            <div translate="no" class="slide-track">
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-                <div class="slide">
-                    <p> UX - UI.</p>
-                </div>
-                <div class="slide">
-                    <p>DESIGNER.</p>
-                </div>
-            </div>
+      <div class="slider_inicio">
+        <div translate="no" class="slide-track">
+          <div class="slide">
+            <p>UX - UI.</p>
+          </div>
+          <div class="slide">
+            <p>DESIGNER.</p>
+          </div>
+          <div class="slide">
+            <p>UX - UI.</p>
+          </div>
+          <div class="slide">
+            <p>DESIGNER.</p>
+          </div>
+          <div class="slide">
+            <p>UX - UI.</p>
+          </div>
+          <div class="slide">
+            <p>DESIGNER.</p>
+          </div>
+          <div class="slide">
+            <p>UX - UI.</p>
+          </div>
+          <div class="slide">
+            <p>DESIGNER.</p>
+          </div>
+          <div class="slide">
+            <p>UX - UI.</p>
+          </div>
+          <div class="slide">
+            <p>DESIGNER.</p>
+          </div>
+          <div class="slide">
+            <p>UX - UI.</p>
+          </div>
+          <div class="slide">
+            <p>DESIGNER.</p>
+          </div>
         </div>
+      </div>
     </section>
     <!-- .3 cinta -->
     <section class="cont_grilla_proyectos">
+      <a href="../projects/portafolio_daniel.html" class="cont_proyectos">
+        <img src="../assets/img/mockupjannieruno.jpg" alt="" />
+        <div class="cont_pie_proyecto">
+          <p>PORTAFOLIO DANIEL</p>
+          <div class="cont_fecha">
+            <img src="../assets/img/iconoproyectoplantilla.svg" alt="" />
+            <p>05-03-2024</p>
+          </div>
+        </div>
+      </a>
 
-        <a href="../projects/portafolio_daniel.html" class="cont_proyectos" >
-            <img src="../assets/img/mockupjannieruno.jpg" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    PORTAFOLIO DANIEL
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        05-03-2024
-                    </p>
-                </div>
-            </div>
-        </a>
+      <a href="$" class="cont_proyectos">
+        <img src="../assets/img/proyectoplantilla.png" alt="" />
+        <div class="cont_pie_proyecto">
+          <p>DESIGNER</p>
+          <div class="cont_fecha">
+            <img src="../assets/img/iconoproyectoplantilla.svg" alt="" />
+            <p>01-01-2023</p>
+          </div>
+        </div>
+      </a>
 
-        <a href="$" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
+      <a href="$" class="cont_proyectos">
+        <img src="../assets/img/proyectoplantilla.png" alt="" />
+        <div class="cont_pie_proyecto">
+          <p>DESIGNER</p>
+          <div class="cont_fecha">
+            <img src="../assets/img/iconoproyectoplantilla.svg" alt="" />
+            <p>01-01-2023</p>
+          </div>
+        </div>
+      </a>
 
-        <a href="$" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
-
-        <a href="$" class="cont_proyectos" >
-            <img src="../assets/img/proyectoplantilla.png" alt="">
-            <div class="cont_pie_proyecto">
-                <p>
-                    DESIGNER
-                </p>
-                <div class="cont_fecha">
-                    <img src="../assets/img/iconoproyectoplantilla.svg" alt="">
-                    <p>
-                        01-01-2023
-                    </p>
-                </div>
-            </div>
-        </a>
+      <a href="$" class="cont_proyectos">
+        <img src="../assets/img/proyectoplantilla.png" alt="" />
+        <div class="cont_pie_proyecto">
+          <p>DESIGNER</p>
+          <div class="cont_fecha">
+            <img src="../assets/img/iconoproyectoplantilla.svg" alt="" />
+            <p>01-01-2023</p>
+          </div>
+        </div>
+      </a>
     </section>
     <!-- *. pie de pagina -->
     <section class="cont_pie_de_pagina">
-        <div class="cont_titulo_pie">
-            <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
-            <div class="animacionpie">
-                <img class="caritapie" src="../assets/img/caritapie.png" alt="carita" />
-                <img class="palabrapie" src="../assets/img/palabrapie.svg" alt="carita" />
-            </div>
+      <div class="cont_titulo_pie">
+        <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
+        <div class="animacionpie">
+          <img
+            class="caritapie"
+            src="../assets/img/caritapie.png"
+            alt="carita"
+          />
+          <img
+            class="palabrapie"
+            src="../assets/img/palabrapie.svg"
+            alt="carita"
+          />
         </div>
-        <div class="list_social">
-            <div class="cont_uno">
-                <p class="titulo_list_social">Social</p>
-                <ul>
-                    <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
-                    <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-                    <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-                </ul>
-            </div>
-            <div class="cont_dos">
-                <p>Ponerse En Contacto</p>
-                <h5>Yaksinvasquez@gmail.com</h5>
-            </div>
+      </div>
+      <div class="list_social">
+        <div class="cont_uno">
+          <p class="titulo_list_social">Social</p>
+          <ul>
+            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+              >LinkedIn</a
+            >
+            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
+          </ul>
         </div>
-        <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla" />
+        <div class="cont_dos">
+          <p>Ponerse En Contacto</p>
+          <h5>Yaksinvasquez@gmail.com</h5>
+        </div>
+      </div>
+      <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla" />
     </section>
+
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -250,6 +275,5 @@
     <script src="../js/three.js"></script>
     <script src="../js/admthreeplantillas.js"></script>
     <script src="../js/scroll.js"></script>
-</body>
-
+  </body>
 </html>
