--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -32,7 +32,7 @@
   <body class="body_inicio">
     <div class="cursor"></div>
 
-    <section class="conte__menui_movil">
+    <section class="conte__menui">
       <header class="header__index">
         <div class="cont__logo__nav">
           <a href="./index.html">
@@ -110,28 +110,6 @@
         </div>
       </div>
     </section>
-
-    <header class="menu_i">
-      <div class="cont_logo">
-        <a href="./index.html">
-          <lottie-player
-            id="logo"
-            src="../assets/img/logoanimado.json"
-            speed="1"
-            style="width: 100px"
-            autoplay
-          >
-          </lottie-player>
-        </a>
-      </div>
-      <div class="cont_list_menu">
-        <a class="boton_list_menu" href=""> Home </a>
-
-        <a class="boton_list_menu" href=""> Portafolios </a>
-
-        <a class="boton_contactame" href=""> Contactame </a>
-      </div>
-    </header>
 
     <section class="seccion_inicio">
       <div class="cont_primera_columna_inicio">
