--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -25,7 +25,7 @@
     <div class="cursor"></div>
 
     <!-- Menu -->
-    <section class="conte__menu">
+    <section class="conte__menui">
       <header class="header__index">
         <div class="cont__logo__nav">
           <a href="./index.html">
@@ -49,79 +49,56 @@
       </header>
       <div class="contendor_activo_de_menu">
         <div class="list_menu">
-          <p class="titulo_list_menu">Menu</p>
           <ul class="lista_uno">
             <div class="cont_opcion_lista">
-              <img
-                class="flachamenu"
-                src="../assets/img/flachamenu.svg"
-                alt=""
-              />
-              <a
-                translate="no"
-                style="font-weight: 400"
-                href="../pages/index.html"
+              <a style="color: #b8b8b8"
                 >Home
                 <p>(01)</p>
               </a>
             </div>
+
             <div class="cont_opcion_lista">
-              <a translate="no" style="color: #b8b8b8"
+              <a translate="no" href="/pages/p_ux_ui.html"
                 >UX - UI
                 <p>(02)</p>
               </a>
             </div>
+
             <div class="cont_opcion_lista">
-              <img
-                class="flachamenu"
-                src="../assets/img/flachamenu.svg"
-                alt=""
-              />
-              <a translate="no" href="/pages/p_ux_research.html"
-                >UX - Research
+              <a href="/pages/p_ux_developer.html"
+                >Frontend
                 <p>(03)</p>
               </a>
             </div>
+
             <div class="cont_opcion_lista">
-              <img
-                class="flachamenu"
-                src="../assets/img/flachamenu.svg"
-                alt=""
-              />
               <a translate="no" href="/pages/p_ux_writing.html"
                 >UX - Writing
                 <p>(04)</p>
               </a>
             </div>
+
             <div class="cont_opcion_lista">
-              <img
-                class="flachamenu"
-                src="../assets/img/flachamenu.svg"
-                alt=""
-              />
-              <a href="/pages/p_ux_developer.html"
-                >Desarrollador
-                <p>(06)</p>
+              <a translate="no" href="/pages/p_ux_research.html"
+                >UX - Research
+                <p>(05)</p>
               </a>
             </div>
           </ul>
+
+          <a
+            class="boton_contactar"
+            href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+            target="_blank"
+            >CONTACTAME</a
+          >
+
           <div class="list_social">
-            <div class="cont_uno">
-              <p class="titulo_list_social">Social</p>
-              <ul>
-                <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
-                  >LinkedIn</a
-                >
-                <a href="https://www.facebook.com/yaksin.vasques.5/"
-                  >Facebook</a
-                >
-                <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-              </ul>
-            </div>
-            <div class="cont_dos">
-              <p>Ponerse En Contacto</p>
-              <h5>Yaksinvasquez@gmail.com</h5>
-            </div>
+            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+              >LinkedIn</a
+            >
+            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
           </div>
         </div>
       </div>
@@ -233,39 +210,46 @@
       </a>
     </section>
     <!-- *. pie de pagina -->
-    <section class="cont_pie_de_pagina">
-      <div class="cont_titulo_pie">
-        <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
-        <div class="animacionpie">
-          <img
-            class="caritapie"
-            src="../assets/img/caritapie.png"
-            alt="carita"
-          />
-          <img
-            class="palabrapie"
-            src="../assets/img/palabrapie.svg"
-            alt="carita"
-          />
+    <section class="pie_de_pagina">
+      <div class="cont_barra_links_pie">
+        <div
+          style="border-left: #000000 solid 1px; padding-left: 2em"
+          class="item_pie"
+        >
+          <h6>Vivo en</h6>
+          <p>Barranquilla - colombia</p>
+        </div>
+
+        <div class="item_pie">
+          <h6>LinkedIn</h6>
+          <p>@Jaksin_sains</p>
+        </div>
+
+        <div class="item_pie">
+          <h6>Facebook</h6>
+          <p>@Jaksin.sains</p>
+        </div>
+
+        <div class="item_pie">
+          <h6>Correo electronico</h6>
+          <p>Yaksinvasquez@gmail.com</p>
         </div>
       </div>
-      <div class="list_social">
-        <div class="cont_uno">
-          <p class="titulo_list_social">Social</p>
-          <ul>
-            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
-              >LinkedIn</a
+
+      <div class="cont_barra_dos_links_pie">
+        <div class="item_pie">
+          <p>
+            Trabajemos juntos,
+            <a
+              href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+              target="_blank"
+              ><strong>Contactame</strong></a
             >
-            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-          </ul>
-        </div>
-        <div class="cont_dos">
-          <p>Ponerse En Contacto</p>
-          <h5>Yaksinvasquez@gmail.com</h5>
+          </p>
         </div>
       </div>
-      <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla" />
+
+      <img src="/assets/img/imgpiedepagina.png" alt="" />
     </section>
 
     <!-- javascripts -->
