--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -15,74 +15,84 @@
 <body class="body_proyecto">
     <div class="cursor"></div>
     <!-- Menu -->
-    <section class="conte__menu">
+    <section class="conte__menui_web">
         <header class="header__index">
-            <div class="cont__logo__nav">
-                <a href="../pages/index.html">
-                    <lottie-player id="logo" src="../assets/img/logoanimado.json" speed="1" style="width: 100px"
-                        autoplay>
-                    </lottie-player>
-                </a>
+          <div class="cont__logo__nav">
+            <a href="./index.html">
+              <lottie-player
+                id="logo"
+                src="../assets/img/logoanimado.json"
+                speed="1"
+                style="width: 100px"
+                autoplay
+              >
+              </lottie-player>
+            </a>
+          </div>
+          <div class="icono-menu">
+            <div class="bars__menu">
+              <span class="line1__bars-menu"></span>
+              <span class="line2__bars-menu"></span>
+              <span class="line3__bars-menu"></span>
             </div>
-            <div class="icono-menu">
-                <div class="bars__menu">
-                    <span class="line1__bars-menu"></span>
-                    <span class="line2__bars-menu"></span>
-                    <span class="line3__bars-menu"></span>
-                </div>
-            </div>
+          </div>
         </header>
         <div class="contendor_activo_de_menu">
-            <div class="list_menu">
-                <p class="titulo_list_menu">Menu</p>
-                <ul class="lista_uno">
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" style="font-weight: 400" href="../pages/index.html">Home
-                            <p>(01)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <a translate="no" style="color:#b8b8b8 ;">UX - UI
-                            <p>(02)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="/pages/p_ux_research.html">UX - Research
-                            <p>(03)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a translate="no" href="/pages/p_ux_writing.html">UX - Writing
-                            <p>(04)</p>
-                        </a>
-                    </div>
-                    <div class="cont_opcion_lista">
-                        <img class="flachamenu" src="../assets/img/flachamenu.svg" alt="" />
-                        <a href="/pages/p_ux_developer.html">Desarrollador
-                            <p>(06)</p>
-                        </a>
-                    </div>
-                </ul>
-                <div class="list_social">
-                    <div class="cont_uno">
-                        <p class="titulo_list_social">Social</p>
-                        <ul>
-                            <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
-                            <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-                            <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-                        </ul>
-                    </div>
-                    <div class="cont_dos">
-                        <p>Ponerse En Contacto</p>
-                        <h5>Yaksinvasquez@gmail.com</h5>
-                    </div>
-                </div>
+          <div class="list_menu">
+            <ul class="lista_uno">
+              <div class="cont_opcion_lista">
+                <a style="color: #b8b8b8"
+                  >Home
+                  <p>(01)</p>
+                </a>
+              </div>
+  
+              <div class="cont_opcion_lista">
+                <a translate="no" href="/pages/p_ux_ui.html"
+                  >UX - UI
+                  <p>(02)</p>
+                </a>
+              </div>
+  
+              <div class="cont_opcion_lista">
+                <a href="/pages/p_ux_developer.html"
+                  >Frontend
+                  <p>(03)</p>
+                </a>
+              </div>
+  
+              <div class="cont_opcion_lista">
+                <a translate="no" href="/pages/p_ux_writing.html"
+                  >UX - Writing
+                  <p>(04)</p>
+                </a>
+              </div>
+  
+              <div class="cont_opcion_lista">
+                <a translate="no" href="/pages/p_ux_research.html"
+                  >UX - Research
+                  <p>(05)</p>
+                </a>
+              </div>
+            </ul>
+  
+            <a
+              class="boton_contactar"
+              href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+              target="_blank"
+              >CONTACTAME</a
+            >
+  
+            <div class="list_social">
+              <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/"
+                >LinkedIn</a
+              >
+              <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
+              <a href="https://www.instagram.com/yakhsin/">Instagram</a>
             </div>
+          </div>
         </div>
-    </section>
+      </section>
 
     <!-- .1 inicio -->
     <section class="cont_inicios">
@@ -244,30 +254,48 @@
     </section>
 
     <!-- *. pie de pagina -->
-    <section class="cont_pie_de_pagina">
-        <div class="cont_titulo_pie">
-            <h2>QUE NO TE DE MIEDO EL <strong>EXITO,</strong> HABLAME!</h2>
-            <div class="animacionpie">
-                <img class="caritapie" src="../assets/img/caritapie.png" alt="carita" />
-                <img class="palabrapie" src="../assets/img/palabrapie.svg" alt="carita" />
-            </div>
+
+    <section class="pie_de_pagina">
+        <div class="cont_barra_links_pie">
+          <div
+            style="border-left: #000000 solid 1px; padding-left: 2em"
+            class="item_pie"
+          >
+            <h6>Vivo en</h6>
+            <p>Barranquilla - colombia</p>
+          </div>
+  
+          <div class="item_pie">
+            <h6>LinkedIn</h6>
+            <p>@Jaksin_sains</p>
+          </div>
+  
+          <div class="item_pie">
+            <h6>Facebook</h6>
+            <p>@Jaksin.sains</p>
+          </div>
+  
+          <div class="item_pie">
+            <h6>Correo electronico</h6>
+            <p>Yaksinvasquez@gmail.com</p>
+          </div>
         </div>
-        <div class="list_social">
-            <div class="cont_uno">
-                <p class="titulo_list_social">Social</p>
-                <ul>
-                    <a href="https://www.linkedin.com/in/jaksin-sains-vasquez/">LinkedIn</a>
-                    <a href="https://www.facebook.com/yaksin.vasques.5/">Facebook</a>
-                    <a href="https://www.instagram.com/yakhsin/">Instagram</a>
-                </ul>
-            </div>
-            <div class="cont_dos">
-                <p>Ponerse En Contacto</p>
-                <h5>Yaksinvasquez@gmail.com</h5>
-            </div>
+  
+        <div class="cont_barra_dos_links_pie">
+          <div class="item_pie">
+            <p>
+              Trabajemos juntos,
+              <a
+                href="https://wa.me/573215841003?text=Hola%20%F0%9F%91%8B%20jaksin,%20estuve%20viendo%20%F0%9F%91%80%20tu%20portafolio%20%F0%9F%92%BC%20,%20me%20gustaria%20platicar%20contigo"
+                target="_blank"
+                ><strong>Contactame</strong></a
+              >
+            </p>
+          </div>
         </div>
-        <img class="grillapie" src="../assets/img/grilla.svg" alt="grilla" />
-    </section>
+  
+        <img src="/assets/img/imgpiedepagina.png" alt="" />
+      </section>
     <!-- javascripts -->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
