--- a/projects/portafolio_daniel.html
+++ b/projects/portafolio_daniel.html
@@ -15,7 +15,7 @@
 <body class="body_proyecto">
     <div class="cursor"></div>
     <!-- Menu -->
-    <section class="conte__menui_web">
+    <section class="conte__menui">
         <header class="header__index">
           <div class="cont__logo__nav">
             <a href="./index.html">
@@ -98,7 +98,7 @@
     <section class="cont_inicios">
         <div class="colum_unos">
             <div class="tipo">
-                <p>PROYECTOS</p>
+                <p>PAGINA WEB</p>
             </div>
             <div class="titulo">
                 <h1 translate="no">
@@ -107,7 +107,7 @@
             </div>
             <div class="parrafo">
                 <p>
-                   JANNIER FERRER
+                   DAVID DANIEL
                 </p>
             </div>
 
@@ -137,12 +137,13 @@
                     <p class="dato">2024</p>
                 </div>
                 <div class="cont_dato">
+                  
                     <p class="titulo">Tipo de producto</p>
                     <p class="dato">WEB</p>
                 </div>
             </div>
             <div class="data_proyecto">
-                Pagina web de un portafolio echo para un desarrollador full-stack con 2 vistas totalmente responsive, Estilo minimalista y limpio con paleta tri-color y multitono, fuentes largas y sin serif estilo urbano y en contraste al blanco.
+                Pagina web de un portafolio echo para un desarrollador full-stack con 2 vistas totalmente responsive, Estilo minimalista y limpio con paleta tri-color y multitono, fuentes largas y san serif estilo urbano y en contraste al blanco.
             </div>
         </div>
     </section>
