--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preload" href="../assets/img/back.mp4" as="video">
     <link rel="shortcut icon" href="../assets/img/iconweb.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <META HTTP-EQUIV="REFRESH" CONTENT="0.1;URL=./pages/index.html">
+    <META HTTP-EQUIV="REFRESH" CONTENT="0.1;URL=./pages/inicio.html">
     <link rel="stylesheet" href="../style/sass.css">
     <title>Portafolio</title>
 </head>
