add ajustes web

--- a/pages/p_ux_developer.html
+++ b/pages/p_ux_developer.html
@@ -47,7 +47,7 @@
           <div class="list_menu">
             <ul class="lista_uno">
               <div class="cont_opcion_lista">
-                <a style="color: #b8b8b8"
+                <a href="/pages/inicio.html"
                   >Home
                   <p>(01)</p>
                 </a>
@@ -61,7 +61,7 @@
               </div>
   
               <div class="cont_opcion_lista">
-                <a href="/pages/p_ux_developer.html"
+                <a style="color: #b8b8b8"
                   >Frontend
                   <p>(03)</p>
                 </a>
