--- a/pages/p_ux_research.html
+++ b/pages/p_ux_research.html
@@ -48,7 +48,7 @@
           <div class="list_menu">
             <ul class="lista_uno">
               <div class="cont_opcion_lista">
-                <a style="color: #b8b8b8"
+                <a href="/pages/inicio.html"
                   >Home
                   <p>(01)</p>
                 </a>
@@ -76,7 +76,7 @@
               </div>
   
               <div class="cont_opcion_lista">
-                <a translate="no" href="/pages/p_ux_research.html"
+                <a translate="no" style="color: #b8b8b8"
                   >UX - Research
                   <p>(05)</p>
                 </a>
