--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -862,7 +862,7 @@
 
         <div class="item_pie">
           <h6>LinkedIn</h6>
-          <p>@Jaksin_sains</p>
+          <p>Jaksinsains</p>
         </div>
 
         <div class="item_pie">
