--- a/pages/p_ux_ui.html
+++ b/pages/p_ux_ui.html
@@ -51,14 +51,14 @@
         <div class="list_menu">
           <ul class="lista_uno">
             <div class="cont_opcion_lista">
-              <a style="color: #b8b8b8"
+              <a  href="/pages/inicio.html"
                 >Home
                 <p>(01)</p>
               </a>
             </div>
 
             <div class="cont_opcion_lista">
-              <a translate="no" href="/pages/p_ux_ui.html"
+              <a translate="no" style="color: #b8b8b8"
                 >UX - UI
                 <p>(02)</p>
               </a>
