--- a/pages/p_ux_writing.html
+++ b/pages/p_ux_writing.html
@@ -25,7 +25,7 @@
     <section class="conte__menui">
         <header class="header__index">
           <div class="cont__logo__nav">
-            <a href="./index.html">
+            <a href="./inicio.html">
               <lottie-player
                 id="logo"
                 src="../assets/img/logoanimado.json"
